#pragma once

namespace Types
{

struct Point
{
	int x;
	int y;
};

struct Rect
{
	int top;
	int left;
	unsigned width;
	unsigned height;
};

} // namespace Shapes
